# FRLTC_Model_Validation

./: CITATION.cff  FRLTC_Model_Validation.py  LICENSE  README.md  pyproject.toml
docs/: IMPLEMENTATION_NOTES.md  REPRODUCIBILITY.md
examples/: run_demo.sh
sample_outputs/: FR-LTC_gate_metrics.csv  FR-LTC_mode_fit.csv  FR-LTC_numerical_audit.csv  FR-LTC_parameter_stability.csv  FR-LTC_run_summary.txt  FR-LTC_singular_values.csv
tests/: test_smoke.py
